--- a/templates/coin.html
+++ b/templates/coin.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/static/css/home.css" />
   <link rel="stylesheet" href="/static/css/coin.css" />
   <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.2/dist/echarts.min.js"></script>
-  <script src="/static/js/chart.js" defer></script>
+  <script src="/static/js/coin.js" defer></script>
 
 </head>
 <body>
